# qa-fork-1784763152-poetry-mixed-version-formats

./: .whitesource  README.md  autotest_config.json  pyproject.toml
